added config encryption and minor changes